<resources>
    <string name="app_name">vdoo</string>
    <string name="s_bottom_home">首页</string>
    <string name="s_bottom_letter">密信</string>
    <string name="s_bottom_wallet">钱包</string>
    <string name="s_bottom_my">我的</string>
    <string name="s_home_title_scan">扫一扫</string>
    <string name="s_home_title_receivables">收款码</string>
    <string name="s_home_title_detail">明细</string>
    <string name="s_home_transfer">转账</string>
    <string name="s_home_trade">资产交易</string>
    <string name="s_home_news">资讯</string>
    <string name="s_home_exp">Explorer</string>
    <string name="s_home_active_friend">激活好友</string>
    <string name="s_active_account">激活账号</string>
    <string name="s_active_success">激活成功</string>
    <string name="s_home_c2c">C2C</string>
    <string name="s_home_benefit">节点计划</string>
    <string name="s_home_more">更多</string>
    <string name="username">用户名</string>
    <string name="id">id</string>
    <string name="ID">ID</string>
    <string name="password">邀请码 548987</string>
    <string name="exit_account">退出账号</string>
    <string name="nickname">昵称</string>
    <string name="modify_phone">修改手机号</string>
    <string name="modify_login_pw">修改登录密码</string>
    <string name="modify_transaction_pw">修改交易密码</string>
    <string name="set_transaction_pw">设置交易密码</string>
    <string name="retrieve_transaction_pw">找回交易密码</string>
    <string name="s_forget_pass"><u>忘记密码？</u></string>
    <string name="s_go_register">立即注册</string>
    <string name="s_login_account_input">请输入帐号</string>
    <string name="s_login_password_input">请输入密码</string>
    <string name="s_login_button">登  录</string>
    <string name="s_login_title">登录</string>
    <string name="s_forget_pass_title">忘记密码</string>
    <string name="s_find_input_phone">请输入手机号码</string>
    <string name="s_find_input_pass">请输入新密码</string>
    <string name="s_get_code">获取验证码</string>
    <string name="s_find_pass_back">找回密码</string>
    <string name="s_input_code">请输入验证码</string>
    <string name="s_chinese">中文</string>
    <string name="s_english">English</string>

    <string name="s_forget_register_title">注册</string>
    <string name="s_register_input_phone">手机号码</string>
    <string name="s_register_input_account">帐号/6位以上数字或字母组合</string>
    <string name="s_register_input_code">验证码</string>
    <string name="s_register_input_pass">登录密码/8~16位数字或字母组合</string>
    <string name="s_register_input_ensure_pass">确认登录密码</string>
    <string name="s_register_invite_code">邀请码（选填）</string>
    <string name="s_protocol_text"><font color='#cccccc'>点击注册按钮，表示您同意</font><font color='#3398e6'><u>隐私条款和服务协议</u></font></string>
    <string name="s_tishi">提示</string>
    <string name="s_active_content">您的帐号未激活</string>
    <string name="s_active_button">寻找好友激活帐号</string>
    <string name="s_active_button_cancel">不用了，暂时不激活</string>

    <string name="authentication">实名认证</string>
    <string name="primary_authentication">初级实名认证</string>
    <string name="senior_authentication">高级实名认证</string>
    <string name="uncertified">未认证</string>
    <string name="certified">已认证</string>
    <string name="audit">审核中</string>
    <string name="not_through">未通过</string>

    <string name="input_name">请输入真实姓名</string>
    <string name="input_idnum">请输入身份证号</string>
    <string name="confirm_submit">确认提交</string>
    <string name="upload_positive_photo">上传身份证正面照</string>
    <string name="upload_opposite_photo">上传身份证反面照</string>
    <string name="shot_demand">拍摄要求：</string>
    <string name="demand">拍摄要求:\n1.请上传本人真实有效信息;\n2.所上传证件信息必须完整清晰.</string>
    <string name="friend_invitation">好友邀请</string>
    <string name="friend_invitation_title">好友邀请</string>
    <string name="invitation_code">邀请码</string>
    <string name="wechat">微信</string>
    <string name="circle_friends">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="invitation_lg">参与vdoo(维度)节点社区建设，共享千万豪礼，加入即送20VDO，分享再送10VDO，每日更领多重好礼\n</string>
    <string name="invitation_lgg">扫码下载APP\n多维区块链生态服务平台</string>


    <string name="copy">点击复制文字</string>
    <string name="copy_success">复制成功</string>
    <string name="invitation_list">邀请列表>></string>
    <string name="s_invitation_list">我的邀请列表</string>
    <string name="invitation_list_title">我的邀请列表</string>
    <string name="inviter">我的邀请人：</string>
    <string name="amount_money">持币量</string>
    <string name="active">活跃度</string>
    <string name="input_original_pw">请输入原密码</string>
    <string name="input_new_pw">请输入新密码</string>
    <string name="confirm_new_pw">确认新密码</string>
    <string name="confirm_modify">确认修改</string>
    <string name="input_original_phone">请输入原手机号</string>
    <string name="input_sms_code">请输入短信验证码</string>
    <string name="input_new_phone">请输入新手机号</string>
    <string name="security_center">安全中心</string>
    <string name="clean_cach">清理缓存</string>'
    <string name="clean_success">清理成功</string>
    <string name="version_upgrades">版本升级</string>
    <string name="about_us">关于我们</string>
    <string name="personal_data">个人资料</string>
    <string name="total_assets">总资产 ≈ </string>
    <string name="approximately">≈</string>
    <string name="usd">USD</string>
    <string name="transfer_accounts">转账</string>
    <string name="transfer_accounts_title">转账</string>
    <string name="input_transfer_accounts">请输入转账帐号</string>
    <string name="choose_currency">选择转账币种</string>
    <string name="input_number">请输入转账数量</string>
    <string name="input_remarks">输入备注（选填）</string>
    <string name="service_charge">手续费</string>
    <string name="next">下一步</string>
    <string name="itransfer_accounts">转账帐号：</string>
    <string name="currency_transfer">转账币种：</string>
    <string name="vdo"> vdo</string>
    <string name="number_transfers">转账数量：</string>
    <string name="number">100.0000 vdo</string>
    <string name="remarks">备注</string>
    <string name="remarks_content">vdo转账</string>
    <string name="service_charge_colon">手续费：</string>
    <string name="phone">86/13******956</string>
    <string name="confirm">确 认</string>
    <string name="detail">详情</string>
    <string name="s_fill_mobile">请填写手机号</string>
    <string name="s_mobile_code_send_success">验证码已发送，请查收短信</string>
    <string name="s_operator_ing">正在提交...</string>
    <string name="s_blank_info">请完善信息</string>
    <string name="s_login_ing">正在登录...</string>
    <string name="s_request_ing">请求中...</string>
    <string name="s_operator_ok">操作成功</string>
    <string name="transfer">转账转入</string>
    <string name="transfer_phone">转账手机：</string>
    <string name="transfer_address">转账地址：</string>
    <string name="remarkss">备注：</string>
    <string name="account_book">账本</string>
    <string name="all">全部</string>
    <string name="change_into">转入</string>
    <string name="turn_out">转出</string>
    <string name="modify_success">修改成功</string>
    <string name="pw_atypism">新密码不一致，请重新输入</string>
    <string name="recharge">充值</string>
    <string name="withdraw_money">提币</string>
    <string name="recharge_address">充值地址</string>
    <string name="copy_address">复制地址</string>
    <string name="input_transfer_address">请输入转账地址</string>
    <string name="s_free_session">自由聊天</string>
    <string name="s_free_contact">通讯录</string>
    <string name="input_transaction_pw">请输入交易密码</string>
    <string name="determine">确定</string>
    <string name="transaction_pw_rule">交易密码必须包含和数字,长度6位</string>

    <string name="s_account_book">明细</string>
    <string name="s_sure">确定</string>
    <string name="s_cancel">取消</string>
    <string name="s_select_month">选择月份</string>
    <string name="s_details_all">全部</string>
    <string name="s_details_in">转入</string>
    <string name="s_details_out">转出</string>
    <string name="s_home_rate">vdo 当前价格：%s（CNY）</string>
    <string name="s_notice">公告</string>
    <string name="s_notice_details">公告详情</string>
    <string name="s_news_details">资讯详情</string>
    <string name="choose_friend">选择朋友</string>
    <string name="s_permission_miss">缺少权限</string>
    <string name="s_permission_open_settings">前往设置</string>
    <string name="s_permission_miss_tips">未全部授权，部分功能可能无法正常运行！</string>
    <string name="s_permission_grant_title">是否授予权限</string>
    <string name="s_permission_grant_msg">程序运行需要权限，否则部分功能可能无法正常运行！</string>
    <string name="s_permission_grant_ok">是</string>
    <string name="s_permission_grant_reject">否</string>
    <string name="s_undeveloped">暂未开放</string>

    <string name="input_id">请输入正确身份证号码</string>
    <string name="search">搜索</string>
    <string name="no_search_data">没有搜索到数据</string>

    <string name="transfer_success">转账成功</string>
    <string name="s_user_protocol">用户协议</string>
    <string name="transfer_account">转账转出</string>
    <string name="upload_success">上传成功</string>
    <string name="s_home_bonous">活动奖励</string>
    <string name="pw_not_null">密码不能为空</string>
    <string name="node_plan">节点计划</string>
    <string name="yesterday_profit">昨日收益</string>
    <string name="accumulative_profit">累计收益:</string>
    <string name="participation_node">参与节点</string>
    <string name="turn_out_node">转出节点</string>
    <string name="node_plan_explain">节点计划说明</string>
    <string name="vdo_balance">vdo可用余额:</string>
    <string name="all_transfer_to">全部转入</string>
    <string name="all_out">全部转出</string>
    <string name="change_to_number">转入数量</string>
    <string name="approximately_dollar">≈$ </string>
    <string name="total">总资产:</string>
    <string name="change_into_suc">转入成功</string>
    <string name="turn_out_suc">转出成功</string>
    <string name="detail_details">明细详情</string>
    <string name="balance">余额：0.0000 vdo</string>
    <string name="debit">debit</string>
    <string name="credit">credit</string>
</resources>
