<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/nav_layout"
        layout="@layout/layout_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="20dp"
        android:text="@string/transfer_address"
        android:textColor="@color/title_bg"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black_text_color"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="20dp"
        android:text="@string/currency_transfer"
        android:textColor="@color/title_bg"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="15dp"
        android:text="@string/vdo"
        android:textColor="@color/black_text_color"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginTop="15dp"
        android:background="@color/line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="20dp"
        android:text="@string/number_transfers"
        android:textColor="@color/title_bg"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="15dp"
        android:text="@string/number"
        android:textColor="@color/black_text_color"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginTop="15dp"
        android:background="@color/line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="20dp"
        android:text="@string/remarkss"
        android:textColor="@color/title_bg"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="15dp"
        android:text="@string/vdo"
        android:textColor="@color/black_text_color"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="20dp"
        android:text="@string/service_charge_colon"
        android:textColor="@color/title_bg"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="15dp"
        android:text="@string/number"
        android:textColor="@color/black_text_color"
        android:textSize="17sp" />

    <Button
        android:id="@+id/confirm"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="334dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:background="@drawable/blue_white_frame_3"
        android:onClick="onClick"
        android:text="@string/confirm"
        android:textColor="@color/blue"
        android:textSize="16sp" />

</LinearLayout>