<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/nav_layout"
        layout="@layout/layout_title" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="20dp"
        android:background="@null"
        android:hint="@string/input_transfer_address"
        android:textColor="@color/black_text_color"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="21dp"
        android:layout_marginRight="21dp"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/choose_currency"
            android:textColor="@color/black_text_color"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="21dp"
        android:layout_marginRight="21dp"
        android:background="@color/line" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="20dp"
        android:background="@null"
        android:hint="@string/input_number"
        android:textColor="@color/black_text_color"
        android:textSize="14sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="20dp"
        android:background="@null"
        android:hint="@string/input_remarks"
        android:textColor="@color/black_text_color"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="21dp"
        android:layout_marginRight="21dp"
        android:background="@color/line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/service_charge"
        android:textColor="@color/title_bg"
        android:textSize="12sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="22dp"
        android:overScrollMode="never" />

    <Button
        android:id="@+id/confirm"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="335dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/blue_white_frame_3"
        android:onClick="onClick"
        android:text="@string/next"
        android:textColor="@color/blue"
        android:textSize="16sp" />
</LinearLayout>