<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="240dp"
        android:layout_height="224dp"
        android:layout_gravity="center"
        android:background="@android:color/white"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/s_tishi"
                android:textColor="@color/base_bg"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/s_active_content"
                android:textColor="#b3b3b3"
                android:textSize="13sp" />

            <Button
                android:id="@+id/bt_login"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bt_submit_height"
                android:layout_marginLeft="@dimen/prof_left_margin"
                android:layout_marginRight="@dimen/prof_left_margin"
                android:layout_marginTop="34dp"
                android:background="@drawable/up_save_bt"
                android:drawableLeft="@drawable/iv_active_p"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:onClick="onActive"
                android:paddingLeft="30dp"
                android:stateListAnimator="@null"
                android:text="@string/s_active_button"
                android:textColor="@color/base_bg"
                android:textSize="14sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:onClick="onActiveCancel"
                android:padding="0dp"
                android:stateListAnimator="@null"
                android:text="@string/s_active_button_cancel"
                android:textColor="#b3b3b3"
                android:textSize="14sp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</FrameLayout>