<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.node.NodePlanActivity">

    <include
        android:id="@+id/nav_layout"
        layout="@layout/layout_title" />

    <View
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@color/node_bg"
        app:layout_constraintTop_toBottomOf="@+id/nav_layout" />

    <TextView
        android:id="@+id/currency_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_blue_frame_3"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:onClick="onClick"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:text="@string/vdo"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_layout" />

    <TextView
        android:id="@+id/yesterday_profit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/yesterday_profit"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_layout" />

    <TextView
        android:id="@+id/vdo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/vdo"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yesterday_profit" />

    <TextView
        android:id="@+id/usd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usd"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vdo" />

    <TextView
        android:id="@+id/total_assets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="192dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@+id/nav_layout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/accumulative_profit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="49"
                android:gravity="center"
                android:text="@string/accumulative_profit"
                android:textColor="@color/black_text_color"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:background="@color/notice_divider" />

            <TextView
                android:id="@+id/node_income_explain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:drawableLeft="@drawable/question_mark"
                android:drawablePadding="6dp"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/node_plan_explain"
                android:textColor="@color/grey_bg"
                android:textSize="10sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <TextView
        android:id="@+id/participation_node"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/title_bg"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/participation_node"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/turn_out_node" />

    <TextView
        android:id="@+id/turn_out_node"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/white"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/turn_out_node"
        android:textColor="@color/grey_bg"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/participation_node"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>